--- a/final-project/index.html
+++ b/final-project/index.html
@@ -26,7 +26,7 @@
         </header>
         <main class="home">
             <section class="banner">
-                <img class="heroimage" src="images/babysitterhero.png" width="960">
+                <img class="heroimage" src="images/babysitterhero.png" width="960" alt="mom holding her baby">
             </section>
             <section class="about">
                 <h3>About Us</h3>
@@ -79,17 +79,17 @@
                     </div>
                     <div>
                         <label for="zip">Zip Code:</label>
-                        <input type="text" id="zip" name="zip" pattern="(\d{5}([\-]\d{4})?)" autocomplete="shipping postal-codep" placeholder="#####-####"></label>
+                        <input type="text" id="zip" name="zip" pattern="(\d{5}([\-]\d{4})?)" autocomplete="postal-code" placeholder="#####-####">
                     </div>
                     <div>
-                        <label for="date">Date of Birth:</label>
+                        <label for="birthdate">Date of Birth:</label>
                         <input type="date" id="birthdate">
                     </div>
                     <button type="submit">Create Account</button>
                 </form>
             </section>
             <section class="testimonial">
-                <img class="imgtestimony" src="images/testimonial.jpeg">
+                <img class="imgtestimony" src="images/testimonial.jpeg" alt= "mom with son on the floor smiling">
                 <p class="mainp">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Asperiores sapiente at recusandae nihil unde, dignissimos
                      laudantium commodi? Ipsam, voluptatibus voluptas!</p>
@@ -101,8 +101,7 @@
                 75 S 4 W<br>
                 Rexburg, ID 83440<br>
                 208-829-9999<br>
-                info@babyoda123.com</strong></p>
-            </p>
+                info@babyoda123.com</p>
             <div>
                 <a href="https://www.facebook.com" class="facebook"><img class="iconfacebook" src="images/facebook.png" alt="Facebook logo"></a>
                 <a href="https://www.instagram.com" class="instagram"><img class="icon" src="images/instagram.png" alt="Instagram logo"></a>
