--- a/final-project/reviews.html
+++ b/final-project/reviews.html
@@ -27,7 +27,7 @@
         <main class="reviews">
             <h2 class="titlereviews">REVIEWS</h2>
             <article class="card one">
-                <img calss="imgcard" src="images/dad.jpeg" alt="father holding his baby boy" width="300">
+                <img class="imgcard" src="images/dad.jpeg" alt="father holding his baby boy" width="300">
                 <p class="pcard">Being a single father is so hard, but thanks to Baby Yoda I can find the right babysitter for my little budy... </p>
                 <footer class='footcard'>
                     <div class="divreviewbutton">
@@ -44,7 +44,7 @@
                 </footer>
             </article>
             <article class="card two">
-                <img calss="imgcard" src="images/parents.jpeg" alt="couple holding thier son" width="300">
+                <img class="imgcard" src="images/parents.jpeg" alt="couple holding thier son" width="300">
                 <p class="pcard">Our son is the most important thing on Earth. Finding someone trustful to watching is esential for us and Baby Yoda makes that way easier... </p>
                 <footer class='footcard'>
                     <div class="divreviewbutton">
@@ -60,7 +60,7 @@
                 </footer>
             </article>
             <article class="card three">
-                <img calss="imgcard" src="images/kidsmom.jpeg" alt="father holding his baby boy" width="300">
+                <img class="imgcard" src="images/kidsmom.jpeg" alt="father holding his baby boy" width="300">
                 <p class="pcard">Working and having kids can be so hard, but I am so grateful that Baby Yoda helps me finds the right person for what I need... </p>
                 <footer class='footcard'>
                     <div class="divreviewbutton">
@@ -89,8 +89,7 @@
                 75 S 4 W<br>
                 Rexburg, ID 83440<br>
                 208-829-9999<br>
-                info@babyoda123.com</strong></p>
-            </p>
+                info@babyoda123.com</p>
             <div>
                 <a href="https://www.facebook.com" class="facebook"><img class="iconfacebook" src="images/facebook.png" alt="Facebook logo"></a>
                 <a href="https://www.instagram.com" class="instagram"><img class="icon" src="images/instagram.png" alt="Instagram logo"></a>
