--- a/final-project/babysitter.html
+++ b/final-project/babysitter.html
@@ -11,8 +11,8 @@
     <body>
         <header>
             <div class="logotitle">
-                <picture>
-                    <img src="images/baby_yoda.png" alt="Logo of the company Baby Yoda 123" height="100">
+                <picture class="baby">
+                    <img src="images/baby_yodablue.png" alt="Logo of the company Baby Yoda 123" height="100">
                 </picture>
                 <h1>BABY YODA 123</h1>
             </div>
@@ -28,36 +28,36 @@
             <section>
                 <form class="babysitter" method="post" action="babyyodaform">
                     <div class="headerform">
-                        <h3 class="titlebabysitter">Find a Babysitter</h3>
+                        <h2 class="titlebabysitter">Find a Babysitter</h2>
                         <img class="findbaby" src="images/findbaby.jpeg" alt="mom leaving her baby with a babysitter">
                     </div>    
                     <fieldset>
                         <legend>Period of Time <em>(Choose one)</em></legend>
                         <div class= "radio">
-                            <input class="inputradio" type="radio" id="onetime" name="one-time" value="one_time" checked> 
+                            <input class="inputradio" type="radio" id="onetime" name="time" value="one_time" checked> 
                             <label class="labelradio" for="onetime">One Time</label>
                         </div>
                         <div>
-                            <input class="inputradio" type="radio" id="regular" name="constant" value="constant" checked> 
+                            <input class="inputradio" type="radio" id="regular" name="time" value="constant" checked> 
                             <label class="labelradio" for="regular">Regular <em> (more than one time per week) </em></label>
                         </div>
                     </fieldset>
                     <fieldset>
                         <legend>Schedule <em>(Choose one)</em></legend>
                         <div class= "radio">
-                            <input class="inputradio" type="radio" id="morning" name="am" value="morning" checked> 
+                            <input class="inputradio" type="radio" id="morning" name="hour" value="morning" checked> 
                             <label class="labelradio" for="morning">Morning (6 a.m. - 12 p.m.)</label>
                         </div>
                         <div>
-                            <input class="inputradio" type="radio" id="afternoon" name="noon" value="afternoon" checked> 
+                            <input class="inputradio" type="radio" id="afternoon" name="hour" value="afternoon" checked> 
                             <label class="labelradio" for="afternoon">Afternoon (12 p.m. - 6 p.m.)</label>
                         </div>
                         <div>
-                            <input class="inputradio" type="radio" id="night" name="night" value="night" checked> 
+                            <input class="inputradio" type="radio" id="night" name="hour" value="night" checked> 
                             <label class="labelradio" for="night">Night (6 p.m. - 6 a.m.)</label>
                         </div>
                         <div>
-                            <input class="inputradio" type="radio" id="full-time" name="full-time" value="full-time" checked> 
+                            <input class="inputradio" type="radio" id="full-time" name="hour" value="full-time" checked> 
                             <label class="labelradio" for="afternoon">Full Time (More than 6 hrs)</label>
                         </div>
                     </fieldset>
@@ -125,18 +125,18 @@
             </section>
         </main>
         <footer>
-            <p>
+            <p class="address">
                 Baby Yoda 123 Headquarters<br>
-                75 S 4 W<br>
+                75 S 4th W<br>
                 Rexburg, ID 83440<br>
                 208-829-9999<br>
                 info@babyoda123.com</p>
-            <div>
+            <div class="socialmedia">
                 <a href="https://www.facebook.com" class="facebook"><img class="iconfacebook" src="images/facebook.png" alt="Facebook logo"></a>
                 <a href="https://www.instagram.com" class="instagram"><img class="icon" src="images/instagram.png" alt="Instagram logo"></a>
                 <a href="https://www.youtube.com/" class="youtube"><img class="icon" src="images/youtube.png" alt="Youtube logo"></a>
             </div>
-            <a class="finalsite" href="../final-site-plan.html">Site Plan | Baby Yoda | Cira Nayade De la Cruz</a>
+            <p class="siteplan">Baby Yoda 123 | <a class="finalsite" href="../final-site-plan.html">Site Plan</a> | Cira De la Cruz</p>
         </footer>
 
     </body>
