--- a/final-project/index.html
+++ b/final-project/index.html
@@ -11,8 +11,8 @@
     <body>
         <header>
             <div class="logotitle">
-                <picture>
-                    <img src="images/baby_yoda.png" alt="Logo of the company Baby Yoda 123" height="100">
+                <picture class="baby">
+                    <img src="images/baby_yodablue.png" alt="Logo of the company Baby Yoda 123" height="100">
                 </picture>
                 <h1>BABY YODA 123</h1>
             </div>
@@ -29,18 +29,13 @@
                 <img class="heroimage" src="images/babysitterhero.png" width="960" alt="mom holding her baby">
             </section>
             <section class="about">
-                <h3>About Us</h3>
-                <p class="mainp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nemo vel laudantium, 
-                    quos illo nihil labore itaque exercitationem culpa sequi veniam facere obcaecati officia magni eos,
-                     ab, fugit minima cupiditate placeat totam quis maiores accusamus accusantium. Facilis atque assumenda 
-                     dolorem error eaque tempore, laudantium aliquam dolores veritatis! Obcaecati, deleniti ea accusamus 
+                <h2>About Us</h2>
+                <p class="mainp">Baby Yoda 123 is a bank of people like you that is looking to find the right babysitter for what you love the most, your children. This page is design with the purpose to help you find a person with specific carcteristics that will give you relief. Also, if you are looking to have a part-time job helping others, this is your place.
                     </p>
             </section>   
             <section class="whyus">
-                <h3>Why us?</h3>
-                <p class="mainp">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt, ex a? Quam accusamus vero quidem doloribus
-                     quos. Dolorem illo distinctio molestiae beatae et facere, a deserunt consequuntur laboriosam dolor! Corporis, 
-                     natus quos? Dignissimos reprehenderit ipsam, alias nam praesentium,
+                <h2>Why us?</h2>
+                <p class="mainp">Baby Yoda 123 has been design with the purpose to give security to parents and babysitters. The world is changing and giving personal information to new people such as your address can let you with a nsecure feeling. This site will protect your information and family by helping you to relese it just with your authorization. Also, people who appears in the bank of babysitters should prove who are legit interested in the job and that they don't have other intentions.
                 </p>
             </section>
             <section class="formhome">
@@ -90,24 +85,22 @@
             </section>
             <section class="testimonial">
                 <img class="imgtestimony" src="images/testimonial.jpeg" alt= "mom with son on the floor smiling">
-                <p class="mainp">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Asperiores sapiente at recusandae nihil unde, dignissimos
-                     laudantium commodi? Ipsam, voluptatibus voluptas!</p>
+                <p class="testimonialp"><em>"Baby Yoda 123 has helped me to find peace while I have to go do some errants where my baby can't come."</em><br>--Lara Smith</p>
             </section>
         </main>
         <footer>
-            <p>
+            <p class="address">
                 Baby Yoda 123 Headquarters<br>
-                75 S 4 W<br>
+                75 S 4th W<br>
                 Rexburg, ID 83440<br>
                 208-829-9999<br>
                 info@babyoda123.com</p>
-            <div>
+            <div class="socialmedia">
                 <a href="https://www.facebook.com" class="facebook"><img class="iconfacebook" src="images/facebook.png" alt="Facebook logo"></a>
                 <a href="https://www.instagram.com" class="instagram"><img class="icon" src="images/instagram.png" alt="Instagram logo"></a>
                 <a href="https://www.youtube.com/" class="youtube"><img class="icon" src="images/youtube.png" alt="Youtube logo"></a>
             </div>
-            <a class="finalsite" href="../final-site-plan.html">Site Plan | Baby Yoda | Cira Nayade De la Cruz</a>
+            <p class="siteplan">Baby Yoda 123 | <a class="finalsite" href="../final-site-plan.html">Site Plan</a> | Cira De la Cruz</p>
 
         </footer>
 
