--- a/final-project/reviews.html
+++ b/final-project/reviews.html
@@ -11,8 +11,8 @@
     <body>
         <header>
             <div class="logotitle">
-                <picture>
-                    <img src="images/baby_yoda.png" alt="Logo of the company Baby Yoda 123" height="100">
+                <picture class="baby">
+                    <img src="images/baby_yodablue.png" alt="Logo of the company Baby Yoda 123" height="100">
                 </picture>
                 <h1>BABY YODA 123</h1>
             </div>
@@ -45,7 +45,7 @@
             </article>
             <article class="card two">
                 <img class="imgcard" src="images/parents.jpeg" alt="couple holding thier son" width="300">
-                <p class="pcard">Our son is the most important thing on Earth. Finding someone trustful to watching is esential for us and Baby Yoda makes that way easier... </p>
+                <p class="pcard">Our son is our priority. Finding someone trustful to watch him is esential for us and Baby Yoda makes that way easier... </p>
                 <footer class='footcard'>
                     <div class="divreviewbutton">
                         <button class="more" type="button">Read More</button>
@@ -61,7 +61,7 @@
             </article>
             <article class="card three">
                 <img class="imgcard" src="images/kidsmom.jpeg" alt="father holding his baby boy" width="300">
-                <p class="pcard">Working and having kids can be so hard, but I am so grateful that Baby Yoda helps me finds the right person for what I need... </p>
+                <p class="pcard">Working and having kids is such a challenge, but Baby Yoda helps me find the right person for what I need... </p>
                 <footer class='footcard'>
                     <div class="divreviewbutton">
                         <button class="more" type="button">Read More</button>
@@ -84,18 +84,18 @@
             
         </main>
         <footer>
-            <p>
+            <p class="address">
                 Baby Yoda 123 Headquarters<br>
-                75 S 4 W<br>
+                75 S 4th W<br>
                 Rexburg, ID 83440<br>
                 208-829-9999<br>
                 info@babyoda123.com</p>
-            <div>
+            <div class="socialmedia">
                 <a href="https://www.facebook.com" class="facebook"><img class="iconfacebook" src="images/facebook.png" alt="Facebook logo"></a>
                 <a href="https://www.instagram.com" class="instagram"><img class="icon" src="images/instagram.png" alt="Instagram logo"></a>
                 <a href="https://www.youtube.com/" class="youtube"><img class="icon" src="images/youtube.png" alt="Youtube logo"></a>
             </div>
-            <a class="finalsite" href="../final-site-plan.html">Site Plan | Baby Yoda | Cira Nayade De la Cruz</a>
+            <p class="siteplan">Baby Yoda 123 | <a class="finalsite" href="../final-site-plan.html">Site Plan</a> | Cira De la Cruz</p>
 
         </footer>
 
