--- a/final-site-plan.html
+++ b/final-site-plan.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -21,51 +20,57 @@
     <p>Parents, caregivers, babysitters</p>
     <h2>Branding</h2>
     <h3>Website Logo</h3>
-    <img src="images/baby-yoda-logo.png" alt="Logo of the company with a baby Yoda" height="250"/>
+    <img src="final-project/images/baby_yodablue.png" alt="Logo of the company with a baby Yoda" height="250"/>
     <hr />
     <h2>Style Guide</h2>
     <h3>Color Palette</h3>
-    <p>Palette URL: <a href="https://coolors.co/aaf0d1-fbfbef-a9b2c3-708090"
-        target="_blank">https://coolors.co/aaf0d1-fbfbef-a9b2c3-708090</a></p>
+    <p>Palette URL: <a href="https://coolors.co/03a0f5-e8ffe0-fef9ff-d8fcc9-a8ddfa"
+        target="_blank">https://coolors.co/03a0f5-e8ffe0-fef9ff-d8fcc9-a8ddfa</a></p>
     <table class="colors">
       <tr>
         <th>Primary</th>
         <th>Secondary</th>
         <th>Accent 1</th>
         <th>Accent 2</th>
+        <th>Accent 3</th>
       </tr>
       <tr>
-        <td class="primary">#042698</td>
-        <td class="secondary">#057EE6</td>
+        <td class="primary">#03a0f5</td>
+        <td class="secondary">#E8FFE0</td>
         <td class="accent1">#FEF9FF</td>
-        <td class="accent2">#D9DBF1</td>
+        <td class="accent2">#d8fcc9</td>
+        <td class="accent3">#A8DDFA</td>
       </tr>
     </table>
     <h3>Typography</h3>
-    <h4>Heading Font: Epilogue</h4>
-    <p>Bold font for heading <br>
-        https://fonts.google.com/specimen/Fredoka+One?sidebar.open=true&selection.family=Fredoka+One</p>
-    <h4>Paragraph Font: Hind Siliguri</h4>
-    <p>Elegant font for paragraphs<br>
-        https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap
+    <h4>Title Font: Fredoka One</h4>
+    <p>Bold Font for Title <br>
+      https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap</p>
+    <h4>Heading Font: Merriweather Sans</h4>
+    <p>Elegant Font for Headings<br>
+      https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap
         </p>
+    <h4>Paragraph Font: Poppins</h4> 
+    <p>Simple Font for Paragraphs<br>https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300&display=swap</p>   
     <h4>Normal paragraph example</h4>
-    <p>We offer a complete package for whatever your needs are in relation to temple service and accomodations. Our shuttle runs to meet the endowment schedule and our babysitting servcies provide an afforable and safe alternative for your family.</p>
+    <p>Baby Yoda 123 is a bank of people like you that is looking to find the right babysitter for what you love the most, your children. This page is design with the purpose to help you find a person with specific carcteristics that will give you relief. Also, if you are looking to have a part-time job helping others, this is your place.</p>
     <h4>Colored paragraph example</h4>
-    <p class="colored">Plan on using our free changing room for you and your fellow patrons as you transition from traveling to the temple to actually entering the temple. We want you to feel comfortable changing and freshing up in order to focus on meaningful service. Let us take care of you.</p>
+    <p class="colored">Baby Yoda 123 is a bank of people like you that is looking to find the right babysitter for what you love the most, your children. This page is design with the purpose to help you find a person with specific carcteristics that will give you relief. Also, if you are looking to have a part-time job helping others, this is your place.</p>
     <h3>Navigation</h3>
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Reservations</a></li>
+        <li><a href="#">Find a Babysitter</a></li>
+        <li><a href="#">Reviews</a></li>
       </ul>
     </nav>
-    <h3>Site Map</h3>
-    <p>Coming soon ...</p>
     <h3>Wireframes</h3>
-    <p><img src= "images/wireframeyoda.png" alt="Temple Inn Large Wireframe" /></p>
+    <h4>Home</h4>
+    <p><img src= "final-project/images/home.jpg" alt="Wireframe of the Home" width="300" /></p>
+    <h4>Find a Babysitter</h4>
+    <p><img src= "final-project/images/findbabysitter.jpg" alt="wareframe of the find a babysiiter site" width="300" /></p>
+    <h4>Reviews</h4>
+    <p><img src= "final-project/images/reviews.jpg" alt="wireframe of the reviews site" width="300"/></p>
   </main>
   <footer>Nayade De La Cruz | BYU-Idaho | WDD 130 - Web Fundamentals</footer>
 </body>
