--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <li>Week 11: <a href="final-site-plan.html">Final: Finish the Site Plan</a></li>
           <li>Week 12: <a href="card.html">Activity: A Media Card Component</a></li>
           <li>Week 13: <a href="final-project/index.html">Final Project Review</a></li>
+          <li>Week 14: <a href="final-project/index.html">Final Project Conpletition</a></li>
 
         </ul>
       </main>
