--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </ul>
       </main>
       <footer>
-        &copy;2020 | Cira De la Cruz | Mexico | <a href="https://www.byui.edu/online" target="_blank">BYU-Idaho Online Learning</a>
+        &copy;2020 | Cira De la Cruz | Rexburg, ID | <a href="https://www.byui.edu/online" target="_blank">BYU-Idaho Online Learning</a>
       </footer>
   </body>
 
